@@ -2,6 +2,17 @@
 
         Reviewed by Adam Roben.
 
+        Set the ResourceResponse HTTP headers in RessourceHandleWin
+        https://bugs.webkit.org/show_bug.cgi?id=44444
+
+        * platform/network/win/ResourceHandleWin.cpp:
+        (WebCore::queryHTTPHeader):
+        (WebCore::ResourceHandle::onRequestComplete):
+
+2010-08-23  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Adam Roben.
+
         Support all available biBitCount values in BitmapInfo
         https://bugs.webkit.org/show_bug.cgi?id=43724
 
